Fixed service login buttons on small screens

--- a/src/components/SmallServiceLoginBtn/SmallServiceLoginBtn.styl
+++ b/src/components/SmallServiceLoginBtn/SmallServiceLoginBtn.styl
@@ -19,6 +19,10 @@
     text-align center
     text-transform capitalize
 
+    span
+      +for_breakpoint(sm-mobile)
+        display none
+
     &.facebook
       background-color $fb_blue
     &.twitter
