--- a/src/style/vars.styl
+++ b/src/style/vars.styl
@@ -24,9 +24,10 @@ $demibold = 600
 $bold     = 700
 
 media_queries = {
-  mobile  : "only screen and (max-width: 768px)",
-  tablet  : "only screen and (min-width: 768px) and (max-width: 991px)",
-  sm-desktop : "only screen and (min-width: 992px) and (max-width: 1200px)",
+  sm-mobile: "only screen and (max-width: 320px)",
+  mobile: "only screen and (max-width: 768px)",
+  tablet: "only screen and (min-width: 768px) and (max-width: 991px)",
+  sm-desktop: "only screen and (min-width: 992px) and (max-width: 1200px)",
   desktop: "only screen and (min-width: 1200px)",
   landscape: "screen and (orientation:landscape)"
 }
